tests/build/cases/impl_ui_node/delegate_list_expr_error_incorrect_type_children.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:16
  |
9 | #[impl_ui_node(children)]
  | ---------------^^^^^^^^--
  | |              |
  | |              the trait `UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNodeList`:
            <implementers-list>
